# quiffen

./: pyproject.toml
tests/: test_qif.py  test_transaction.py
