[tool.poetry]
name = "quiffen"
version = "2.0.11"
description = "Quiffen"
authors = ["Isaac Harris-Holt <isaac@harris-holt.com>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
homepage = "https://github.com/isaacharrisholt/quiffen"
repository = "https://github.com/isaacharrisholt/quiffen"
documentation = "https://quiffen.readthedocs.io/en/latest/"
keywords = ['qif', 'finance', 'data processing']
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
]


[tool.poetry.dependencies]
python = ">=3.9"
pydantic = "^2.9.2"
pandas = "^2.2.3"
python-dateutil = "^2.9.0.post0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"
isort = "^5.12.0"
ruff = "^0.6.8"
tox = "^4.4.6"
pyright = "^1.1.382.post1"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
include_trailing_comma = true

[tool.ruff]
line-length = 88

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports in __init__.py

[tool.pyright]
pythonVersion = "3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
